--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -92,127 +92,136 @@
     {% endwith %}
 {% endblock %}
 
+
 {% block page_related_content %}
 
-    <div class="page__block page__block--yellow">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-10 col-lg-push-1">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="project-details">
-                                <h3 class="dotted project-details__title">{% trans "Project details" %}</h3>
+    {% if project.type == 'external project' %}
+        <div class="page__block page__block--yellow">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-lg-10 col-lg-push-1">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="project-details">
+                                    <h3 class="dotted project-details__title">{% trans "Project details" %}</h3>
 
-                                <div>
-                                    {% if project.program %}
+                                    <div>
+                                        {% if project.program %}
+                                            <div class="project-details__item">
+                                                <div class="project-details__item-title">
+                                                    {% trans "Program" %}
+                                                </div>
+                                                <div class="project-details__item-desc">
+                                                    {{ project.program }}
+                                                </div>
+                                            </div>
+                                        {% endif %}
+
+                                        {% if project.program_type %}
+                                            <div class="project-details__item">
+                                                <div class="project-details__item-title">
+                                                    {% trans "Program type" %}
+                                                </div>
+                                                <div class="project-details__item-desc">
+                                                    {{ project.program_type }}
+                                                </div>
+                                            </div>
+                                        {% endif %}
+
                                         <div class="project-details__item">
                                             <div class="project-details__item-title">
-                                                {% trans "Program" %}
+                                                {% trans "Beginning" %}
                                             </div>
                                             <div class="project-details__item-desc">
-                                                {{ project.program }}
+                                                {{ project.date_from }}
                                             </div>
                                         </div>
-                                    {% endif %}
 
-                                    {% if project.program_type %}
                                         <div class="project-details__item">
                                             <div class="project-details__item-title">
-                                                {% trans "Program type" %}
+                                                {% trans "End" %}
                                             </div>
                                             <div class="project-details__item-desc">
-                                                {{ project.program_type }}
+                                                {{ project.date_to }}
                                             </div>
                                         </div>
-                                    {% endif %}
 
-                                    <div class="project-details__item">
-                                        <div class="project-details__item-title">
-                                            {% trans "Beginning" %}
-                                        </div>
-                                        <div class="project-details__item-desc">
-                                            {{ project.date_from }}
-                                        </div>
-                                    </div>
-
-                                    <div class="project-details__item">
-                                        <div class="project-details__item-title">
-                                            {% trans "End" %}
-                                        </div>
-                                        <div class="project-details__item-desc">
-                                            {{ project.date_to }}
-                                        </div>
-                                    </div>
-
-                                    <div class="project-details__item">
-                                        <div class="project-details__item-title">
-                                            {% trans "Status" %}
-                                        </div>
-                                        <div class="project-details__item-desc">
-                                            {{ project.project_status }}
-                                        </div>
-                                    </div>
-
-                                    {% if project.website %}
                                         <div class="project-details__item">
                                             <div class="project-details__item-title">
-                                                {% trans "Website" %}
+                                                {% trans "Status" %}
                                             </div>
                                             <div class="project-details__item-desc">
-                                                <a href="{{ project.website }}" target="_blank" title="{{ project.title }}">{{ project.website }}</a>
+                                                {{ project.project_status }}
                                             </div>
                                         </div>
-                                    {% endif %}
 
-                                    <div class="project-details__logo">
-                                        {% with project.images.all|get_type:'logo' as images %}
-                                            {% include 'core/inc/logo.html' %}
-                                        {% endwith %}
+                                        {% if project.website %}
+                                            <div class="project-details__item">
+                                                <div class="project-details__item-title">
+                                                    {% trans "Website" %}
+                                                </div>
+                                                <div class="project-details__item-desc">
+                                                    <a href="{{ project.website }}" target="_blank" title="{{ project.title }}">{{ project.website }}</a>
+                                                </div>
+                                            </div>
+                                        {% endif %}
+
+                                        <div class="project-details__logo">
+                                            {% with project.images.all|get_type:'logo' as images %}
+                                                {% include 'core/inc/logo.html' %}
+                                            {% endwith %}
+                                        </div>
+
                                     </div>
-
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="project-details">
-                                <h3 class="dotted project-details__title">{% trans "Participants" %}</h3>
+                            <div class="col-sm-6">
+                                <div class="project-details">
+                                    <h3 class="dotted project-details__title">{% trans "Participants" %}</h3>
 
-                                <div>
+                                    <div>
 
-                                    {% if project.lead_team %}
+                                        {% if project.lead_team %}
+                                            <div class="project-details__item">
+                                              {% if project.lead_team %}
+                                                <div class="project-details__item-title">
+                                                    {% trans "Project lead team" %}
+                                                </div>
+                                                <div class="project-details__item-desc">
+                                                    {{ project.lead_team }}
+                                                </div>
+                                              {% elif project.lead_organization %}
+                                                <div class="project-details__item-title">
+                                                    {% trans "Project lead organization" %}
+                                                </div>
+                                                <div class="project-details__item-desc">
+                                                    {{ project.lead_organization }}
+                                                </div>
+                                              {% endif %}
+                                            </div>
+                                        {% endif %}
+
                                         <div class="project-details__item">
-                                          {% if project.lead_team %}
                                             <div class="project-details__item-title">
-                                                {% trans "Project lead team" %}
+                                                {% trans "Partners" %}
                                             </div>
                                             <div class="project-details__item-desc">
-                                                {{ project.lead_team }}
+                                                {% for team in project.teams.all %}
+                                                    {{ team }}<br>
+                                                {% endfor %}
+                                                {% for organization in project.organizations.all %}
+                                                    {% if organization.url %}
+                                                        <a href="{{organisation.url}}" target="_blank" title="{{organisation}}">
+                                                    {% endif %}
+                                                    {{ organization }}<br>
+                                                    {% if organization.url %}
+                                                        </a>
+                                                    {% endif %}
+                                                {% endfor %}
                                             </div>
-                                          {% elif project.lead_organization %}
-                                            <div class="project-details__item-title">
-                                                {% trans "Project lead organization" %}
-                                            </div>
-                                            <div class="project-details__item-desc">
-                                                {{ project.lead_organization }}
-                                            </div>
-                                          {% endif %}
                                         </div>
-                                    {% endif %}
 
-                                    <div class="project-details__item">
-                                        <div class="project-details__item-title">
-                                            {% trans "Partners" %}
-                                        </div>
-                                        <div class="project-details__item-desc">
-                                            {% for team in project.teams.all %}
-                                                {{ team }}<br>
-                                            {% endfor %}
-                                            {% for organization in project.organizations.all %}
-                                                {{ organization }}<br>
-                                            {% endfor %}
-                                        </div>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -220,27 +229,29 @@
                 </div>
             </div>
         </div>
-    </div>
+    {% endif %}
 
 {% endblock %}
 
 {% block logo %}
-    <div class="page__block{% if block.background_color %} page__block--{{ block.background_color }}{% endif %}">
-        <div class="white-bg pb2">
-            <div class="container">
-                <div class="row" data-summary-content>
-                    <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
-                        <h2 class="dotted">{% trans "Partners" %}</h2>
-                        <ul class="partners-list">
-                            {% for organization in project.organizations.all %}
-                                {% with organization.images.all|get_type:'logo' as images %}
-                                    {% include 'core/inc/logo.html' %}
-                                {% endwith %}
-                            {% endfor %}
-                        </ul>
+    {% if project.organizations.all|length > 0 %}
+        <div class="page__block{% if block.background_color %} page__block--{{ block.background_color }}{% endif %}">
+            <div class="white-bg pb2">
+                <div class="container">
+                    <div class="row" data-summary-content>
+                        <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
+                            <h2 class="dotted">{% trans "Partners" %}</h2>
+                            <ul class="partners-list">
+                                {% for organization in project.organizations.all %}
+                                    {% with organization.images.all|get_type:'logo' as images %}
+                                        {% include 'core/inc/logo.html' %}
+                                    {% endwith %}
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    {% endif %}
 {% endblock %}
