--- a/app/static/src/sass/modules/_page.scss
+++ b/app/static/src/sass/modules/_page.scss
@@ -132,9 +132,36 @@ $module: ".page";
             @include padding-bottom(2);
             @include margin(2 0 0 0);
 
-            a {
+            a:not(.button) {
+
                 color: white;
-            }
+        		position: relative;
+        		z-index: 1;
+        		text-decoration: none;
+                @include transition(all 0.15s ease-in-out);
+
+        		&:after {
+        			@include transition(all 0.15s ease-in-out);
+        			content: "";
+        			display: block;
+        			position: absolute;
+        			left: 0;
+        			right: 0;
+        			bottom: 0;
+        			height: 1px;
+        			background: white;
+        			z-index: -1;
+        		}
+
+        		&:hover {
+                    color: $color-main;
+        			&:after {
+        				bottom: 0;;
+                        background: $color-main;
+        				height: 1px;
+        			}
+        		}
+        	}
 
             h2:first-child {
                 margin-top: 0;
